<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">yamo</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="logodescribe">describe</string>
    <string name="username">Enter user name</string>
    <string name="password">Enter password</string>
    <string name="loginButtondescription">login button</string>
    <string name="forgetPassword">forgot Username / Password?</string>
    <string name="or">-Or-</string>
    <string name="signUp">sign-up button</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="collegeName">School Name</string>
    <string name="new_username">Username</string>
    <string name="pass_word_new">Create a new password</string>
    <string name="password2">Re-enter password</string>
    <string name="emailaddress">Enter a valid Email address</string>
    <string name="submitdes">submit desc</string>
    <string name="title_activity_edit_profile">EditProfileActivity</string>
    <string name="title_activity_add_pic">AddPicActivity</string>
    <string name="skipbutton">Skip this Step</string>
    <string name="title_activity_take_picture">TakePictureActivity</string>
    <string name="takePic">take picture</string>
    <string name="title_activity_choices">ChoicesActivity</string>
    <string name="selection">Select all that apply</string>
    <string name="profilepic">photo de profile</string>
    <string name="arts">Arts</string>
    <string name="education">Education</string>
    <string name="sports">Sports</string>
    <string name="community_service">Community Servicce</string>
    <string name="social">Social</string>
    <string name="welcome">Welcome Guy</string>
    <string name="next1">Next</string>
    <string name="title_activity_profile_page">ProfilePage</string>
    <string name="name">"Guyzo "</string>
    <string name="date">04/12/2013</string>
    <string name="event">James logue created an Event</string>
    <string name="event2">Soccer game in lockport</string>
    <string name="title_activity_shortcut">Shortcut</string>
    <string name="title_activity_event1">Event1Activity</string>
    <string name="title_homepage_list">Items</string>
    <string name="title_homepage_detail">HomePage Detail</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="ddgg">ddff</string>
    <string name="eevents">Events</string>
    <string name="title_activity_new_event">NewEventActivity</string>
    <string name="new_pic">Add picture</string>
    <string name="createEv">create</string>
    <string name="cds">Create New Event</string>
    <string name="eventName">Enter name</string>
    <string name="location">Enter Location</string>
    <string name="EnterTime">Enter Time</string>
    <string name="cat">Category</string>

    <string-array name="categoriess">
        <item>Sport</item>
        <item>Education</item>
        <item>Community Service</item>
        <item>Art</item>
    </string-array>

    <string name="title_activity_soccer">SoccerActivity</string>
    <string name="title_activity_description">DescriptionActivity</string>
    <string name="title_activity_confirmation">Confirmation</string>

</resources>
