<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SignUpActivity" >

    <EditText
        android:id="@+id/collegename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:background="#B0E0E6"
        android:ems="10"
        android:hint="@string/collegeName" />

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/collegename"
        android:layout_below="@+id/collegename"
        android:layout_marginTop="18dp"
        android:background="#B0E0E6"
        android:ems="10"
        android:hint="@string/new_username" />

    <EditText
        android:id="@+id/pass_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/username"
        android:layout_below="@+id/username"
        android:layout_marginTop="22dp"
        android:background="#B0E0E6"
        android:ems="10"
        android:hint="@string/pass_word_new" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/emailaddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:background="#B0E0E6"
        android:ems="10"
        android:hint="@string/emailaddress"
        android:inputType="textEmailAddress"
        android:onClick="alertSubmit" />

    <EditText
        android:id="@+id/password2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pass_word"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:background="#B0E0E6"
        android:ems="10"
        android:hint="@string/password2"
        android:inputType="textPassword" />

    <ImageButton
        android:id="@+id/create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailaddress"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:background="#ffffff"
        android:contentDescription="@string/submitdes"
        android:onClick="alertSubmit"
        android:src="@drawable/submitbutton" />

    <TextView
        android:id="@+id/choicetext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/create"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:text="@string/or"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <ImageButton
        android:id="@+id/signupbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/choicetext"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:background="#ffffff"
        android:contentDescription="@string/logodescribe"
        android:src="@drawable/facebutt" />

</RelativeLayout>
