<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".YamoFirstActivity" >

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:contentDescription="@string/logodescribe"
        android:src="@drawable/logo" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/userName"
        android:layout_below="@+id/userName"
        android:layout_marginTop="22dp"
        android:background="#87CEEB"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <ImageButton
        android:id="@+id/create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/choicetext"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:background="#ffffff"
        android:contentDescription="@string/loginButtondescription"
        android:onClick="login"
        android:src="@drawable/loginbutton" />

    <EditText
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/choicetext"
        android:layout_below="@+id/logo"
        android:layout_marginTop="18dp"
        android:background="#87CEEB"
        android:ems="10"
        android:hint="@string/username" />

    <TextView
        android:id="@+id/skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/create"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:text="@string/or"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <ImageButton
        android:id="@+id/signupbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/skip"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:background="#ffffff"
        android:contentDescription="@string/signUp"
        android:onClick="signing"
        android:src="@drawable/signp" />

    <TextView
        android:id="@+id/choicetext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/forgetPassword"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>
