<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ProfilePage" >

    <ImageView
        android:id="@+id/imageItem"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="78dp"
        android:contentDescription="@string/logodescribe"
        android:src="@drawable/profile" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/loginButtondescription"
        android:src="@drawable/tab" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/imageView2"
        android:contentDescription="@string/logodescribe"
        android:src="@drawable/add" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView2"
        android:layout_centerVertical="true"
        android:contentDescription="@string/logodescribe"
        android:src="@drawable/about" />

    <ImageView
        android:id="@+id/joinevent"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageItem"
        android:layout_centerVertical="true"
        android:layout_marginLeft="16dp"
        android:clickable="true"
        android:contentDescription="@string/loginButtondescription"
        android:onClick="eventOpen"
        android:src="@drawable/events" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/imageView3"
        android:layout_alignTop="@+id/joinevent"
        android:clickable="true"
        android:contentDescription="@string/loginButtondescription"
        android:src="@drawable/friend" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="58dp"
        android:background="#54B2F1"
        android:gravity="center"
        android:orientation="vertical" >
        
        <TextView
            android:id="@+id/textTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event2" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event2" />
  
        </LinearLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView3"
        android:layout_centerHorizontal="true"
        android:text="@string/name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView3"
        android:layout_alignRight="@+id/joinevent"
        android:layout_marginBottom="15dp"
        android:text="@string/date" />

</RelativeLayout>
